--- a/Freecodecamp/css/style.css
+++ b/Freecodecamp/css/style.css
@@ -14,3 +14,26 @@ h1, h2, p{
     margin-left: auto;
     margin-right: auto;
 }
+
+.flavor{
+    text-align:left;
+    width:75%;
+}
+
+.price{
+    text-align: right;
+    width:25%;
+}
+
+.item p{
+    display:inline-block;
+}
+
+ul {
+
+    list-style-type: none;
+}
+
+ul li{
+    display: inline-block;
+}
