--- a/Day6/Card/css/styles.css
+++ b/Day6/Card/css/styles.css
@@ -31,7 +31,8 @@ span{
     background-color: blue;
     color:white;
     text-align: center;
-    border-radius:20px;
+    border-radius:30px;
+    font-size: smaller;
 }
 
 .php{
